fixed linkedin link & header spacing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,7 +8,7 @@ header {
     z-index: 100;
 }
 main {
-    margin-top: 22rem;
+    margin-top: 21rem;
 }
 .centered {
     position: relative;
@@ -21,7 +21,7 @@ main {
 }
 .jumbotron {
     margin: 0;
-	padding: 4.5rem 0;
+	padding: 3.5rem 0;
     background: url(../images/computer.jpg) no-repeat;
     background-position: center;
   	-webkit-background-size: cover;
@@ -33,8 +33,9 @@ main {
     font-size: 4rem;
     font-weight: bold;
     text-transform: uppercase;
+    padding: 0;
 }
-.lead{
+.lead {
     font-size: 1.5rem;
 }
 .bg-dark {
@@ -59,18 +60,23 @@ a {
     color: #224358;
 }
 p:first-child {
-    padding-top: 3rem;
+    padding-top: 2rem;
 }
-p:last-child, li:last-child {
+p:last-child, ul li:last-child {
     padding-bottom: 2rem;
 }
+
 .light-gray {
     background: #dbe1e5;
 }
 h3 {
-    padding-top: 3rem;
+    padding-top: 2rem;
     color: #224358;
 }
+h3.lead {
+    padding-top: 0;
+}
+
 .btn {
     margin: 1rem;
 }
@@ -80,10 +86,13 @@ h3 {
 .pad-top {
     padding-top: 10px;
 }
+.margin-bottom {
+    margin-bottom: 2rem;
+}
 .anchor {
   display: block;
-  height: 380px; /*same height as header*/
-  margin-top: -380px; /*same height as header*/
+  height: 272px; /*same height as header*/
+  margin-top: -272px; /*same height as header*/
   visibility: hidden;
 }
 
@@ -102,7 +111,7 @@ h3 {
         max-width: 100%;
     }
     .anchor {
-        height: 203px; /*same height as header*/
-        margin-top: -203px; /*same height as header*/
+        height: 55px; /*same height as header*/
+        margin-top: -55px; /*same height as header*/
     }
 }
